--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="src/treeDFSelect.js"></script>
+    <script src="src/deepEquality.js"></script>
   </head>
   <body></body>
 </html>
